--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                 <div class="text">Aprovecha tu vida al máximo, <br> el tiempo es lo mejor que tienes, <br>
                     has de tu vida una obra de arte.</div>
                 <div class="heart"></div>
-            </div>
-            <h1>Press to card <br> Happy Birthay Majo</h1>
+            </div><br>
+            <img src="img/press to card.png" height="67" width="auto">
         </div>
 
     </div>
