--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
             <div class="front"></div>
             <div class="card">
                 <div class="text">Aprovecha tu vida al máximo, <br> el tiempo es lo mejor que tienes, <br>
-                    has de tu vida una obra de arte.</div>
-                <div class="heart"></div>
+                    has de tu vida una obra de arte.
+                <img src="img/heart.png" class="heart"></div>
+                
             </div><br>
             <img src="img/press to card.png" height="67" width="auto">
         </div>
