--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="front"></div>
             <div class="card">
                 <div class="text">Aprovecha tu vida al máximo, <br> el tiempo es lo mejor que tienes, <br>
-                    has de tu vida una obra de arte.
+                    has de tu vida una obra de arte. <br>
                 <img src="img/heart.png" class="heart"></div>
                 
             </div><br>
