--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="envelope"></div>
             <div class="front"></div>
             <div class="card">
-                <div class="text">Aprovecha tu vida al máximo, el tiempo es lo mejor que tienes, has de tu vida una obra de arte. 
+                <div class="text">Aprovecha tu vida al máximo, el tiempo es lo mejor que tienes, has de tu vida una obra de arte. <br>
                 <img src="img/heart.png" class="heart"></div>
                 
             </div><br>
